--- a/airbnbApi/src/main/resources/templates/mail/email-confirm.html
+++ b/airbnbApi/src/main/resources/templates/mail/email-confirm.html
@@ -2,20 +2,21 @@
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>studyCafe</title>
+    <title>이메일 인증</title>
 </head>
 <body>
 <div>
     <p>안녕하세요. <span th:text="${nickname}"></span>님</p>
-
-    <h2 th:text="${message}">메시지</h2>
-
+    <p th:text="${message}">메시지</p>
     <div>
+        <h2>
         <a th:href="${link}" th:text="${linkName}">Link</a>
+        </h2>
     </div>
 </div>
+<hr />
 <footer>
-    <small>studyCafe</small>
+    <small>airbnb 2023.1.1</small>
 </footer>
 </body>
 </html>
